cilium-cli/connectivity/manifests/allow-all-except-world-pre-v1.11.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: cilium-test
  name: allow-all-except-world
spec:
  endpointSelector: {}
  egress:
  - toEntities:
    - host
    - remote-node
    - cluster
    - init
    - health
  - toEndpoints:
    - {}
  ingress:
  - fromEntities:
    - host
    - remote-node
    - cluster
    - init
    - health
  - fromEndpoints:
    - {}
